# WhileLang

./: README.md  grammar.bnf  meson.build
exe/: main.cpp
include/wl/: AST.h  Context.h  Interpreter.h  SyntaxError.h  Tokenizer.h
include/wl/AST/: AssignmentStatement.h  BinaryOperation.h  Command.h  CommandBuilder.h  CommandList.h  ExpressionBuilder.h  IOReadCommand.h  IOWriteCommand.h  IfElseStatement.h  Literal.h  Operation.h  ProgramStart.h  SkipStatement.h  Value.h  Variable.h  VariableDeclaration.h  VariableDeclarationList.h  WhileStatement.h
libwl/: meson.build
libwl/include/: Tokenizer.h
libwl/include/wl/: Context.h  Interpreter.h  SyntaxError.h  Tokenizer.h
libwl/src/: CharTypes.h  Interpreter.cpp  SyntaxError.h  TokenEnum.cpp  Tokenizer.cpp
libwl/src/AST/: Command.h  CommandList.h  ProgramDeclaration.h  VariableDeclaration.h
samples/: a.w  factorial.w  fibonacci.w  isprime.w  test.w
src/: CharTypes.h  Context.cpp  Interpreter.cpp  Main.cpp  TokenEnum.cpp  Tokenizer.cpp  Tokenizer.h  main.cpp
src/AST/: Command.h  CommandBuilder.cpp  CommandList.h  ExpressionBuilder.cpp  ProgramDeclaration.h  VariableDeclaration.h  VariableDeclarationList.h
tests/: test.cpp  test_assign.cpp  test_control.cpp  test_expr.cpp  test_interpreter.cpp  test_program.cpp  test_tokenizer.cpp  utils.h
wlc/: Main.cpp
wltest/: test.cpp  test_tokenizer.cpp  test_tokenizer.h
